# ani-uanm

./: .gitignore  LICENSE  README.md  ani-uanm-cli.py  pyproject.toml  requirements.txt
anime_sources/: __init__.py  anime_unity.py
src/ani_uanm/: cli.py
src/ani_uanm/apis/: __init__.py  animeunity.py
src/ani_uanm/model/: __init__.py  anime.py  episode.py
src/ani_uanm/player/: __init__.py  mpv_player.py  redirector.py
src/ani_uanm/utils/: __init__.py  config.py  consts.py  decorators.py
src/apis/: animeunity.py
src/model/: anime.py  episode.py
src/player/: __init__.py  mpv_player.py  redirector.py
src/utils/: __init__.py  config.py  consts.py
